--- a/navigation.html
+++ b/navigation.html
@@ -23,6 +23,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="https://xyrez.de/logs.html">Logs</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://xyrez.de/team.html" target="_blank">Team</a>
+              </li>
           <li class="nav-item">
            <a class="nav-link" href="https://progstats.io/details/eu/malganis/620556-ist-gildenlos/all/28-sanctum-of-domination\" target="_blank">Progstats.io</a>
           </li>
