fixed Team nav, changed team.html title

--- a/navigation.html
+++ b/navigation.html
@@ -24,20 +24,20 @@
                 <a class="nav-link" href="https://xyrez.de/logs.html">Logs</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://xyrez.de/team.html" target="_blank">Team</a>
+                <a class="nav-link" href="https://xyrez.de/team.html">Team</a>
               </li>
-          <li class="nav-item">
-           <a class="nav-link" href="https://progstats.io/details/eu/malganis/620556-ist-gildenlos/all/28-sanctum-of-domination\" target="_blank">Progstats.io</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://raider.io/guilds/eu/malganis/ist%20gildenlos" target="_blank">Raider.io</a>
-          </li>
-          <li class="nav-item">
+            <li class="nav-item">
+                <a class="nav-link" href="https://progstats.io/details/eu/malganis/620556-ist-gildenlos/all/28-sanctum-of-domination\" target="_blank">Progstats.io</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://raider.io/guilds/eu/malganis/ist%20gildenlos" target="_blank">Raider.io</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="https://www.warcraftlogs.com/guild/eu/malganis/ist%20gildenlos" target="_blank">Warcraftlogs</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://www.wowprogress.com/guild/eu/mal-ganis/ist+gildenlos" target="_blank">Wowprogress</a>
-          </li>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://www.wowprogress.com/guild/eu/mal-ganis/ist+gildenlos" target="_blank">Wowprogress</a>
+            </li>
         </ul>
     </div>
 </nav> 
