Added navigation.html, styles.css, videos.html

--- a/videos.html
+++ b/videos.html
@@ -23,7 +23,11 @@ $(function(){
 });
 </script>
 <!--end of Navigation bar-->
-<div class="col-lg-4 col-md-5 col-lg-push-8 col-md-push-7 hidden-xs hidden-sm raid-side-nav raid-side-bar home-margin-block">test</div>
+<div class="d-flex flex-row">
+    <div class="p-2">Flex item 1</div>
+    <div class="p-2">Flex item 2</div>
+    <div class="p-2">Flex item 3</div>
+  </div>
   
             
   
