--- a/logstest.html
+++ b/logstest.html
@@ -26,7 +26,7 @@ $(function(){
     <div class="container center">
         <h2>Die letzten ist gildenlos Logs</h2>
     </div> 
-    <div id="logs" class="container center"></div>    
+    <div id="logs" class="contrainer center"></div>    
 </div>
 
 </body>
