--- a/logstest.html
+++ b/logstest.html
@@ -2,32 +2,33 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <title>ist gildenlos Logs</title>    
+    <title>Logs</title>    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="stylestest.css">        
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>        
-    <script src="fetchtest.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="stylestest.css" type="text/css">        
 </head>
 <body>
-<!--Navigation bar-->
-<div id="nav-placeholder"></div>
-<script>
-$(function(){
-  $("#nav-placeholder").load("navigation.html");
-});
-</script>
-<!--end of Navigation bar-->
+    <!--Navigation bar-->
+    <div id="nav-placeholder"></div>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script>
+        $(function(){
+          $("#nav-placeholder").load("navigation.html");
+        });
+    </script>
+    <!--end of Navigation bar-->
 
-<div class="wrapper center">
-    <div class="container center">
-        <h2>Die letzten ist gildenlos Logs</h2>
-    </div> 
-    <div id="logs" class="contrainer center"></div>    
-</div>
+    <div class="wrapper center">
+        <div class="container-fluid center">
+            <h2>Die letzten Logs</h2>
+        </div> 
+        <div id="logs" class="container-fluid center"></div>    
+    </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>        
+    <script src="js/fetchtest.js"></script>
 </body>
 </html>
