changed progstats link

--- a/navigation.html
+++ b/navigation.html
@@ -27,7 +27,7 @@
                 <a class="nav-link" href="https://xyrez.de/team.html">Team</a>
               </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://progstats.io/details/eu/malganis/620556-ist-gildenlos/all/28-sanctum-of-domination\" target="_blank">Progstats.io</a>
+                <a class="nav-link" href="https://progstats.io/details/eu/malganis/620556-ist-gildenlos/all/31-vault-of-the-incarnates" target="_blank">Progstats.io</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="https://raider.io/guilds/eu/malganis/ist%20gildenlos" target="_blank">Raider.io</a>
