--- a/navigation.html
+++ b/navigation.html
@@ -24,7 +24,7 @@
                 <a class="nav-link" href="https://xyrez.de/logs.html">Logs</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://xyrez.de/team.html">Team</a>
+                <a class="nav-link" href="https://www.warcraftlogs.com/embed/guild-progress-detailed-composition/31?difficulty=5&guild=620556&includeSetGear=false&includeSetGearThresholds=false">Team</a>
               </li>
             <li class="nav-item">
                 <a class="nav-link" href="https://progstats.io/details/eu/malganis/620556-ist-gildenlos/all/31-vault-of-the-incarnates" target="_blank">Progstats.io</a>
